# adapt_io

./: .gitignore  LICENSE  README.md  demo_xrf.py  pyproject.toml
config/: i14_mapping.yaml  i14_xrf_mapping.yaml
data/: i14-394175_xrf.nxs
docker/: Dockerfile
src/adapt_io/: __init__.py  cli.py  hdf5_loader.py  loader.py  schema.py  writer.py
